--- a/app/scss/project-history/_project-histoy.scss
+++ b/app/scss/project-history/_project-histoy.scss
@@ -3,7 +3,7 @@ body.project-history {
   padding-bottom: 100px;
 }
 body.project-history main {
-  outline: 2px solid red; ///////
+  // outline: 2px solid red; ///////
   padding-block: 50px;
 
   section {
