--- a/app/scss/project-component/_github.scss
+++ b/app/scss/project-component/_github.scss
@@ -18,7 +18,7 @@
   }
 
   a:nth-of-type(1):hover {
-    background-color: hsla(342, 100%, 50%, 0.3);
+    background-color: hsla(303, 100%, 50%, 0.3);
     // color: red;
   }
   a:nth-of-type(2):hover {
@@ -27,6 +27,10 @@
   }
   a:nth-of-type(3):hover {
     background-color: hsla(125, 100%, 50%, 0.3);
+    // color: red;
+  }
+  a:nth-of-type(4):hover {
+    background-color: hsla(0, 100%, 50%, 0.3);
     // color: red;
   }
 }
