--- a/app/scss/project-component/_languages.scss
+++ b/app/scss/project-component/_languages.scss
@@ -11,15 +11,21 @@
       font-size: 0.9rem;
       margin-bottom: 2px;
       span {
-        padding-right: 2px;
-        font-size: 1rem;
+        padding-left: 2px;
+        // font-size: 1rem;
       }
 
       &:nth-of-type(1) span {
-        color: hsla(145, 100%, 50%, 0.6);
+        color: hsla(145, 100%, 55%, 0.7);
       }
       &:nth-of-type(2) span {
-        color: hsla(342, 100%, 50%, 0.6);
+        color: hsla(342, 100%, 55%, 0.7);
+      }
+      &:nth-of-type(3) span {
+        color: hsla(313, 100%, 55%, 0.7);
+      }
+      &:nth-of-type(4) span {
+        color: hsla(249, 100%, 58%, 0.938);
       }
     }
   }
@@ -27,6 +33,7 @@
   .languages {
     img {
       margin-inline: 4px;
+      width: 50px;
     }
   }
 }
