--- a/app/scss/project-history/_commit-description.scss
+++ b/app/scss/project-history/_commit-description.scss
@@ -23,9 +23,13 @@ body.project-history main section .commit-description {
       margin-inline: 15px 5px;
     }
     span:nth-of-type(1) {
-      color: hsl(120, 100%, 40%);
+      color: hsl(249, 100%, 63%);
+      margin-inline: 0 5px;
     }
     span:nth-of-type(2) {
+      color: hsl(120, 100%, 40%);
+    }
+    span:nth-of-type(3) {
       color: hsl(0, 100%, 40%);
     }
   }
