--- a/app/scss/project-code-analytics/_body.scss
+++ b/app/scss/project-code-analytics/_body.scss
@@ -2,10 +2,42 @@ body.project-code-analytics {
   background-color: hsl(0, 0%, 2%);
   padding-bottom: 100px;
   padding-top: 50px;
+  height: 100vh;
   h1 {
     color: #fff;
     text-align: center;
     padding-block: 5px;
     font-family: "Lobster", cursive;
+  }
+
+  main {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+  }
+  h2 {
+    color: #ffffff;
+    text-align: center;
+    padding-block: 5px;
+    font-family: "Lobster", cursive;
+    position: relative;
+    z-index: 5;
+  }
+  div {
+    position: absolute;
+    border-radius: 50%;
+    width: 380px;
+    height: 380px;
+    background-color: hsla(0, 0%, 0%);
+    animation: a 10s linear 1s infinite alternate forwards;
+    @keyframes a {
+      from {
+        filter: drop-shadow(0 0 50px red);
+      }
+      to {
+        filter: drop-shadow(0 0 10px hsl(234, 100%, 50%));
+      }
+    }
   }
 }
